<resources>
    <string name="app_name">EStore</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="sign_up">Sign Up</string>
    <string name="trending">TRENDING</string>
    <string name="browse">BROWSE</string>
    <string name="hot">HOT</string>
    <string name="cart">CART</string>
    <string name="profile">PROFILE</string>
    <string name="product_detail">Product Detail</string>
    <string name="keyword">Keyword...</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="search_result">Search Result</string>
    <string name="NULL">@null</string>
    <string name="BottomNavigationBehavior">com.example.estore.utils.BottomNavigationBehavior</string>
</resources>
