<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.SearchResultActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbarSearch"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_appbar">
            <ImageView
                    android:id="@+id/ic_backSearch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_backbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/search_result"
                    android:id="@+id/tvTitleSearch"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_searchbutton"
                    android:id="@+id/ic_searchSearch"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            <ImageView
                    android:id="@+id/ic_closeSearch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_closebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtSearchSearch"
                    android:hint="@string/keyword"
                    android:textColorHint="@color/colorWhite"
                    android:maxLines="1"
                    android:gravity="center|left"
                    android:imeOptions="actionNext"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toEndOf="@+id/ic_closeSearch"
                    app:layout_constraintEnd_toStartOf="@id/tvSearchSearch"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/transparent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            <TextView
                    android:id="@+id/tvSearchSearch"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/search"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupSearchSearch"
                    app:constraint_referenced_ids="tvSearchSearch,edtSearchSearch,ic_closeSearch"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupNormalSearch"
                    app:constraint_referenced_ids="ic_backSearch,tvTitleSearch,ic_searchSearch"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.appbar.CollapsingToolbarLayout
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/tvResult"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center|left"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_appbar"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResult"
            app:layout_constraintTop_toBottomOf="@id/toolbarSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

    </androidx.recyclerview.widget.RecyclerView>
    <ImageView
            android:id="@+id/notFound"
            android:visibility="gone"
            android:src="@drawable/searchemptystate"
            app:layout_constraintTop_toBottomOf="@id/toolbarSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
